--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -3,7 +3,9 @@ body{
     background-color: #e8e8e8;
     background-repeat: repeat;
     overflow-y: scroll;
+    overflow-x: none;
 }
+
 .starter-template{
     padding:40px 15px;
     text-align:center;
@@ -60,6 +62,10 @@ hr {
     margin-bottom: 15px;
 }
 
+hlpf_bottom_margin{
+    margin-bottom: 15px;
+}
+
 #footer_contact a{
     color: lightblue;
 }
@@ -77,6 +83,4 @@ hr {
     color: white;
     margin-right: 50px;
 }
-
-
 /* ========== Temp styles  =================== */
