--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -114,3 +114,6 @@ hlpf_bottom_margin{
 }
 
 /* ========== Temp styles  =============== */
+@-moz-document url-prefix() {
+  fieldset { display: table-cell; }
+}
