--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -1,4 +1,4 @@
-body{
+body {
     /*background-image: url(../Images/background.png);*/
     background-color: #e8e8e8;
     background-repeat: repeat;
@@ -15,13 +15,13 @@ p {
     text-align:center;
 }
 
-#hlpf_menu, #hlpf_menu ul li ul{
+#hlpf_menu, #hlpf_menu ul li ul {
     background-color: #2060c0;
     border-radius: 0px;
     margin-bottom: 0px;
 }
 
-#hlpf_menu ul li ul{
+#hlpf_menu ul li ul {
     background-color: #236ad5;
 }
 
@@ -33,8 +33,9 @@ p {
     background-color: #2a78ea;
 }
 
-.hlpf_news p {
-    word-wrap: break-word;
+.hlpf_news {
+    overflow-y: auto;
+    max-height: 222px;
 }
 
 .hlpf_newsborder {
@@ -48,7 +49,7 @@ hr {
     border: 1px solid #2060c0;
 }
 
-.hlpf_large_news_box{
+.hlpf_large_news_box {
     min-height: 200px;
     max-height: auto;
 }
@@ -57,20 +58,20 @@ hr {
     border-radius: 0px;
 }
 
-#hlpf_footer{
+#hlpf_footer {
     background-color: #2060c0;
     color: white;
 }
 
-#hlpf_footer div div{
+#hlpf_footer div div {
   padding: 30px;  
 }
 
-#hlpf_footer h2{
+#hlpf_footer h2 {
     margin-bottom: 15px;
 }
 
-hlpf_bottom_margin{
+#hlpf_bottom_margin {
     margin-bottom: 15px;
 }
 
