If news fails, it still works!

--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -1,5 +1,5 @@
 body {
-    /*background-image: url(../Images/background.png);*/
+    background-image: url(../Images/background.png);
     background-color: #e8e8e8;
     background-repeat: repeat;
     overflow-y: scroll;
