--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -41,7 +41,8 @@ p {
     color: black;
     padding-top: 10px;
 }
-
+.hlpf_newsborder .hlpf_adminmenu li {
+}
 hr {   
     border: 1px solid #2060c0;
 }
