Funtions added and minor design changes
added Send function button with function = 1click and confirm box.

--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -29,9 +29,9 @@ p {
 }
 
 .hlpf_news {
-    overflow-y: auto;
+    
     overflow-x: none;
-    max-height: 222px;
+    min-height: 222px;
     word-wrap: break-word;
 }
 
