--- a/JS/seat-charts/jquery.seat-charts.css
+++ b/JS/seat-charts/jquery.seat-charts.css
@@ -1,40 +1,42 @@
 div.seatCharts-cell {
-	height: 22px;
-	width: 22px;
-	margin: 0px;
+	height: 16px;
+	width: 16px;
+	margin: 3px;
 	float: left;
 	text-align: center;
 	outline: none;
 	font-size: 13px;
-	line-height: 16px;
+	line-height:20px;
+	color: white;
 }
 div.seatCharts-seat {
 	background-color: green;
-	color: white;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
 	cursor: default;
-	display: block;
-	align-items: center;
 }
 div.seatCharts-seat:focus {
 	border: none;
 }
 div.seatCharts-space {
-	background-color: transparent;
+	background-color: white;
 }
 div.seatCharts-row {
-	height: 25px;
+	height: 50px;
 }
 div.seatCharts-row:after {
 	clear: both;
 }
 div.seatCharts-seat.selected {
-	background-color: blue;
+	background-color: aqua;
 }
 div.seatCharts-seat.focused {
 	background-color: #6db131;
 }
 div.seatCharts-seat.available {
 	background-color: green;
+	line-height: 30px;
 }
 div.seatCharts-seat.unavailable {
 	background-color: red;
