--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -29,7 +29,6 @@ p {
 }
 
 .hlpf_news {
-    
     overflow-x: none;
     min-height: 222px;
     word-wrap: break-word;
@@ -42,7 +41,6 @@ p {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
 .hlpf_adminmenu {
     overflow-y: auto;
 }
@@ -119,6 +117,11 @@ hr {
     min-height: 22px;
 }
 
+.hlpf_admin_seatmap {
+    list-style: none;
+    -webkit-padding-start: 15px;
+}
+
 /* Nav drop down mouse over when on desktop  */
 @media (min-width:767px) {
     .dropdown:hover .dropdown-menu {
@@ -131,7 +134,7 @@ hr {
     background-color: #337ab7;
 }
 
-/* Til admin side. Se menuen.*/
+/* For admin menu. */
 .list-group .list-group-item {
     margin-bottom: 4px;
 }
