--- a/JS/seat-charts/jquery.seat-charts.css
+++ b/JS/seat-charts/jquery.seat-charts.css
@@ -1,42 +1,44 @@
 div.seatCharts-cell {
-	height: 16px;
-	width: 16px;
-	margin: 3px;
+	height: 23px;
+	width: 23px;
+	margin: 0px;
 	float: left;
 	text-align: center;
 	outline: none;
-	font-size: 13px;
-	line-height:20px;
+	font-size: 10px;
+	line-height: 25px;
 	color: white;
 }
 div.seatCharts-seat {
 	background-color: green;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
+	border: 1px solid black;
 	cursor: default;
 }
 div.seatCharts-seat:focus {
-	border: none;
 }
 div.seatCharts-space {
-	background-color: white;
+	background-color: transparent;
+	border: 1px solid transparent;
 }
 div.seatCharts-row {
-	height: 50px;
+	height: 20px;
 }
 div.seatCharts-row:after {
 	clear: both;
 }
 div.seatCharts-seat.selected {
-	background-color: aqua;
+	background-color: blue;
+	-webkit-transition: background-color 0.1s ease-in;
+  -moz-transition:    background-color 0.1s ease-in;
+  -ms-transition:     background-color 0.1s ease-in;
+  -o-transition:      background-color 0.1s ease-in;
+  transition:         background-color 0.1s ease-in;
 }
 div.seatCharts-seat.focused {
 	background-color: #6db131;
 }
 div.seatCharts-seat.available {
 	background-color: green;
-	line-height: 30px;
 }
 div.seatCharts-seat.unavailable {
 	background-color: red;
