Holy shit that fucking worked.
See Seatmap.php line 58. Ez

--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -20,6 +20,11 @@ p {
     background-color: #236ad5;
 }
 
+textarea.hlpf_seatmap-gen {
+  font-family: monospace, Consolas, Monaco, Lucida Console,
+                Liberation Mono, DejaVu Sans Mono,
+                Bitstream Vera Sans Mono, Courier New;
+}
 .hlpf_white_text, .hlpf_white_text ul li a {
     color: white;
 }
