--- a/Style/seatmap/hlpf_seatsStyling.css
+++ b/Style/seatmap/hlpf_seatsStyling.css
@@ -1,3 +1,12 @@
+#map {
+  border: 4px solid darkgrey;
+  width: auto;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  background-repeat: no-repeat;
+}
 div.seatStyle_Crew.available,
 div.seatStyle_Crew.unavailable {
   color: black;
