--- a/Style/seatmap/hlpf_seatsStyling.css
+++ b/Style/seatmap/hlpf_seatsStyling.css
@@ -1,42 +1,43 @@
 #map {
+  background-repeat: no-repeat;
   border: 4px solid darkgrey;
-  width: auto;
+  float: left;
   height: auto;
   margin-left: auto;
   margin-right: auto;
   position: relative;
-  background-repeat: no-repeat;
+  width: auto;
 }
 div.seatStyle_Crew.available,
 div.seatStyle_Crew.unavailable {
-  color: black;
   background-color: yellow;
+  color: black;
 }
 div.seatStyle_Stage.available,
 div.seatStyle_Stage.unavailable {
-  border-color: grey;
   background-color: grey;
+  border-color: grey;
   color: grey;
   cursor: default;
 }
 div.seatStyle_Arkade.available,
 div.seatStyle_Arkade.unavailable {
-  border-color: pink;
   background-color: pink;
+  border-color: pink;
   color: pink;
   cursor: default;
 }
 div.seatStyle_Nothing.available,
 div.seatStyle_Nothing.unavailable {
-  border-color: transparent;
   background-color: transparent;
+  border-color: transparent;
   color: transparent;
   cursor: default;
 }
 div.seatStyle_Kiosk.available,
 div.seatStyle_Kiosk.unavailable {
-  border-color: orange;
   background-color: orange;
+  border-color: orange;
   color: orange;
   cursor: default;
 }
