--- a/JS/seat-charts/jquery.seat-charts.css
+++ b/JS/seat-charts/jquery.seat-charts.css
@@ -1,52 +1,55 @@
 div.seatCharts-cell {
-	height: 23px;
-	width: 23px;
-	margin: 0px;
-	float: left;
-	text-align: center;
-	outline: none;
-	font-size: 10px;
-	line-height: 25px;
-	color: white;
+  height: 23px;
+  width: 23px;
+  margin: 0px;
+  float: left;
+  text-align: center;
+  outline: none;
+  font-size: 10px;
+  line-height: 25px;
+  color: white;
 }
 div.seatCharts-seat {
-	background-color: green;
-	border: 1px solid black;
-	cursor: default;
+  background-color: green;
+  border: 1px solid black;
+  cursor: default;
 }
 div.seatCharts-seat:focus {
 }
 div.seatCharts-space {
-	background-color: transparent;
-	border: 1px solid transparent;
+  background-color: transparent;
+  border: 1px solid transparent;
 }
 div.seatCharts-row {
-	height: 20px;
+  height: 20px;
 }
 div.seatCharts-row:after {
-	clear: both;
+  clear: both;
 }
 div.seatCharts-seat.selected {
-	background-color: blue;
-	-webkit-transition: background-color 0.1s ease-in;
+  background-color: blue;
+  -webkit-transition: background-color 0.1s ease-in;
   -moz-transition:    background-color 0.1s ease-in;
   -ms-transition:     background-color 0.1s ease-in;
   -o-transition:      background-color 0.1s ease-in;
   transition:         background-color 0.1s ease-in;
 }
 div.seatCharts-seat.focused {
-	background-color: #6db131;
+  background-color: #6db131;
 }
 div.seatCharts-seat.available {
-	background-color: green;
+  background-color: green;
 }
 div.seatCharts-seat.unavailable {
-	background-color: red;
-	cursor: not-allowed;
+  background-color: red;
+  cursor: not-allowed;
 }
 ul.seatCharts-legendList {
-	list-style: none;
+  list-style: none;
 }
 li.seatCharts-legendItem {
-	line-height: 2;
+  line-height: 2;
+}
+span.seatCharts-legendDescription {
+  padding-left: 3px;
 }
