--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -25,6 +25,7 @@ textarea.hlpf_seatmap-gen {
                 Liberation Mono, DejaVu Sans Mono,
                 Bitstream Vera Sans Mono, Courier New;
   width: 100%;
+  resize: vertical;
 }
 .hlpf_white_text, .hlpf_white_text ul li a {
     color: white;
