--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -59,6 +59,9 @@ textarea.hlpf_seatmap-gen {
 .hlpf_adminmenu ul li {
     float: left;
 }
+.hlpf_adminmenu button {
+    width: 100%;
+}
 
 hr {
     border: 1px solid #2060c0;
