Farver og arrangører
Farver og arrangører tilføjes med dette commit, samt at gøre koden en
smule pænere

--- a/Style/hlpf_main.css
+++ b/Style/hlpf_main.css
@@ -72,6 +72,10 @@ textarea.hlpf_seatmap-gen {
     padding-bottom: 10px;
 }
 
+.hlpf_Black_Border {
+    border: 1px solid black;
+}
+
 .hlpf_facebok_like { min-height: 22px; }
 
 .hlpf_large_news_box {
