System Style var naming
Changing hlpf_ var name base to LanCMS

This is a step to expand the with of the systems Scope and not focused
on one orginazation

--- a/Style/LanCMSmain.css
+++ b/Style/LanCMSmain.css
@@ -12,7 +12,7 @@ li {
   display: block;
 }
 
-textarea.hlpf_seatmap-gen {
+textarea.LanCMSseatmap-gen {
   font-family: monospace, Consolas, Monaco, Lucida Console,
                 Liberation Mono, DejaVu Sans Mono,
                 Bitstream Vera Sans Mono, Courier New;
@@ -20,53 +20,53 @@ textarea.hlpf_seatmap-gen {
   resize: vertical;
 }
 
-#hlpf_bottom_margin { margin-bottom: 15px; }
+#LanCMSbottom_margin { margin-bottom: 15px; }
 
-#hlpf_footer {
+#LanCMSfooter {
     background-color: #2060c0;
     color: white;
 }
-#hlpf_footer div div { padding: 30px; }
-#hlpf_footer h2 { margin-bottom: 15px; }
+#LanCMSfooter div div { padding: 30px; }
+#LanCMSfooter h2 { margin-bottom: 15px; }
 
-#hlpf_footer_contact a { color: lightblue; }
+#LanCMSfooter_contact a { color: lightblue; }
 
-#hlpf_footer_links {
+#LanCMSfooter_links {
     list-style-type: none;
     padding: 0;
 }
-#hlpf_footer_links li a { color: white }
+#LanCMSfooter_links li a { color: white }
 
-#hlpf_menu,
-#hlpf_menu ul li ul {
+#LanCMSmenu,
+#LanCMSmenu ul li ul {
     background-color: #2060c0;
     border-radius: 0px;
     margin-bottom: 0px;
 }
-#hlpf_menu ul li ul { background-color: #236ad5; }
+#LanCMSmenu ul li ul { background-color: #236ad5; }
 
 #social_media a {
     color: white;
     margin-right: 50px;
 }
 
-.hlpf_admin_seatmap {
+.LanCMSadmin_seatmap {
     list-style: none;
     -webkit-padding-start: 15px;
 }
 
-.hlpf_adminmenu { overflow-y: auto; }
-.hlpf_adminmenu ul { list-style: none; }
-.hlpf_adminmenu ul li { float: left; }
-.hlpf_adminmenu button { width: 100%; }
+.LanCMSadminmenu { overflow-y: auto; }
+.LanCMSadminmenu ul { list-style: none; }
+.LanCMSadminmenu ul li { float: left; }
+.LanCMSadminmenu button { width: 100%; }
 
-.hlpf_adminmenu a:not([alt="Sort up"]):not([alt="Sort down"]),
-.hlpf_adminmenu span.btn,
+.LanCMSadminmenu a:not([alt="Sort up"]):not([alt="Sort down"]),
+.LanCMSadminmenu span.btn,
 #admin_panel a.btn-info {
     display: block;
 }
 
-.hlpf_contentbox {
+.LanCMScontentbox {
     background-color: white;
     border: 1px solid rgba(0,0,0,0.2);
     color: black;
@@ -74,38 +74,38 @@ textarea.hlpf_seatmap-gen {
     padding-bottom: 10px;
 }
 
-.hlpf_Black_Border {
+.LanCMSBlack_Border {
     border: 1px solid black;
 }
 
-.hlpf_facebok_like { min-height: 22px; }
+.LanCMSfacebok_like { min-height: 22px; }
 
-.hlpf_large_news_box {
+.LanCMSlarge_news_box {
     min-height: 200px;
     max-height: auto;
 }
 
-.hlpf_margin_botom img { margin-bottom: 5px; }
-.hlpf_margin_botom img:hover { border: 1px solid #337ab7; }
+.LanCMSmargin_botom img { margin-bottom: 5px; }
+.LanCMSmargin_botom img:hover { border: 1px solid #337ab7; }
 
-.hlpf_news {
+.LanCMSnews {
     overflow-x: none;
     min-height: 222px;
     word-wrap: break-word;
 }
 
-.hlpf_no_margin_padding {
+.LanCMSno_margin_padding {
     margin: 0px;
     padding: 0px;
 }
 
-.hlpf_no_round_border a { border-radius: 0px; }
+.LanCMSno_round_border a { border-radius: 0px; }
 
-.hlpf_white_text,
-.hlpf_white_text ul li a {
+.LanCMSwhite_text,
+.LanCMSwhite_text ul li a {
     color: white;
 }
-.hlpf_white_text ul li a:hover { background-color: #2a78ea; }
+.LanCMSwhite_text ul li a:hover { background-color: #2a78ea; }
 
 /* Nav drop down mouse over when on desktop  */
 @media (min-width:767px) {
